<resources>
    <string name="app_name">csci3660termproject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">reset</string>
    <string name="color_fragment_name">Your picked color is:</string>
    <string name="color_fragment_pick">Pick Color</string>
    <string name="color_fragment_set">Set Color</string>
    <string name="color_fragment_title">Pick Your Color!</string>
    <string name="choose_size">Choose Grid Size!</string>
    <string name="size_6">6 x 6</string>
    <string name="size_10">10 x 10</string>
    <string name="size_12">12 x 12</string>
    <string name="game_tab">Game</string>
    <string name="color_tab">Color</string>
    <string name="settings_tab">Settings</string>
    <string name="_6_x_6">6 x 6</string>
    <string name="_10_x_10">10 x 10</string>
    <string name="_12_x_12">12 x 12</string>
    <string name="grid_size">Grid Size</string>
    <string name="enter_your_api_key">Enter your API key:</string>
    <string name="x_rapidapi_key">X-RapidAPI-Key</string>
    <string name="save_api_key">Save API Key</string>
    <string name="default_color">Default</string>

</resources>