<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/gameFragment">

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.zybooks.csci3660termproject.GameFragment"
        android:label="@string/game_tab"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/colorFragment"
        android:name="com.zybooks.csci3660termproject.ColorFragment"
        android:label="@string/color_tab"
        tools:layout="@layout/fragment_color" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.zybooks.csci3660termproject.SettingsFragment"
        android:label="@string/settings_tab"
        tools:layout="@layout/fragment_settings" />
</navigation>